Fix T44263: Invalid parameters to fill_vn_fl in deform.c.

Own fault, thanks a bunch to LazyDodo for finding that - and odd
GCC did not warn about it...